--- a/index.html
+++ b/index.html
@@ -1,1 +1,113 @@
-Hello World
+<!DOCTYPE HTML>
+<html lang="en">
+
+<head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+  <title>Zhaobin Mo</title>
+  
+  <meta name="author" content="Zhaobin Mo">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <link rel="icon" type="image/png" href="images/culogo.png">
+
+  <!-- <script src=”main.js” defer></script> -->
+</head>
+
+<body>
+<!-- 
+<div class="topnav" id="myTopnav">
+  <a href="#Home">Home</a>
+  <a href="#Research">Research</a>
+  <a href="#Experience">Experience</a>
+  <a href="#Education">Education</a>
+  <a href="#Misc">Misc</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
+
+<script>
+  function myFunction() {
+    var x = document.getElementById("myTopnav");
+    if (x.className === "topnav") {
+      x.className += " responsive";
+    } else {
+      x.className = "topnav";
+    }
+  }
+</script> -->
+  <table style="width:100%;max-width:900px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+    <tr style="padding:10px">
+      <td style="padding:10px">
+
+        <section id="Home" style="padding-top:2vh;padding-bottom:1vh;">       
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr style="padding:10px">
+            <td style="padding:2.5%;width:63%;vertical-align:middle;line-height: 150%;">
+              <p style="text-align:center">
+                <name>Zhaobin Mo - 莫钊镔</name>
+              </p>
+              <p>
+                I am a fourth-year Ph. D. student advised by <a href="https://www.civil.columbia.edu/content/xuan-sharon-di">Prof. Ding Zhao</a>
+                (<a href="https://sharondi-columbia.wixsite.com/ditectlab/">Ditect Lab</a>) at Columbia University.
+                My research interests lie at Physics-informed Deep Learning.
+              </p>
+              <p>
+                I received my Master degree in Civil Engineering also at Columbia University.
+                I received my Bachelor of Engineering from the <a href="http://www.dae.tsinghua.edu.cn/publish/daeen/index.html">School of Vehicle and Mobility</a>
+              </p>
+              <p style="text-align:center">
+                <a href="mailto:zm2302@columbia.edu">Email</a> &nbsp/&nbsp
+                <a href="data/CV_ZhaobinMo.pdf">CV (last updated: July 2023)</a> &nbsp/&nbsp
+                <a href="https://scholar.google.com/citations?hl=zh-CN&user=A1yMyYEAAAAJ">Google Scholar</a> &nbsp/&nbsp
+                <a href="https://github.com/ZhaobinMo">Github</a>
+              </p>
+            </td>
+            <td style="padding:2.5%;width:25%;max-width:25%">
+              <a href="images/profile.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/profile.png" class="hoverZoomLink"></a>
+            </td>
+          </tr>
+        </tbody></table>
+        </section>
+
+        <section id="News">
+            <h2 style="padding-bottom:1vh;"> News </h2>
+            <table style="line-height:150%" class="table table-hover table-striped">
+                <tr><td style="width:20%;">2023/06 - Our survey paper about Physics-informed Deep Learning in Traffic State Estimation accepted by Algorithms <a href="https://sites.google.com/view/rsspioneers2023/participants"></a>!</td></tr>
+                <tr><td style="width:20%;">2023/05 - Selected as Mindlin Scholar Civil in Engineering by Columbia University! </td></tr>
+                <tr><td style="width:20%;">2022/06 - I joined Siemens as a Student Researcher.</td></tr>
+            </table>
+        </section>
+
+        <br>
+
+        <br>
+
+        <section id="Service" >
+            <h2 style="padding-bottom:1vh;">Service</h2>    
+            <table style="line-height:150%" class="table table-hover table-striped">
+              <tr><td style="width:25%;">Conference Reviewer: KDD 2022, ECML 2021, AAAI 2021</td></tr>
+              <tr><td style="width:25%;">Journal Reviewer: T-ITS </td></tr>
+            </table>
+        </section>
+
+        <br>
+
+        <br>
+
+
+        <section id="Misc">
+          <h2 style="padding-bottom:1vh;">Misc</h2>
+          <table style="line-height:150%" class="table table-hover table-striped">
+            <tr><td style="width:25%;"><a href="https://www.youtube.com/watch?v=g09OtU0F1ac"><author>Music Recommendation</author></a></td></tr>
+          </table>
+        </section>
+
+      </td>
+    </tr>
+  </table>
+</body>
+
+</html>
