--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <name>Zhaobin Mo - 莫钊镔</name>
               </p>
               <p>
-                I am a fourth-year Ph. D. student advised by <a href="https://www.civil.columbia.edu/content/xuan-sharon-di">Prof. Ding Zhao</a>
+                I am a fourth-year Ph. D. student advised by <a href="https://www.civil.columbia.edu/content/xuan-sharon-di">Prof. Xuan Di</a>
                 (<a href="https://sharondi-columbia.wixsite.com/ditectlab/">Ditect Lab</a>) at Columbia University.
                 My research interests lie at Physics-informed Deep Learning.
               </p>
