--- a/index.html
+++ b/index.html
@@ -50,13 +50,12 @@
                 <name>Zhaobin Mo - 莫钊镔</name>
               </p>
               <p>
-                I am a fourth-year Ph. D. student advised by <a href="https://www.civil.columbia.edu/content/xuan-sharon-di">Prof. Xuan Di</a>
-                (<a href="https://sharondi-columbia.wixsite.com/ditectlab/">Ditect Lab</a>) at Columbia University.
-                My research interests lie at Physics-informed Deep Learning.
+                I am currently a fourth-year Ph. D. student in Civil Engineering at Columbia University. I will be graduating in Dec. 2023 under the advision of <a href="https://www.civil.columbia.edu/content/xuan-sharon-di">Prof. Xuan Di</a> at
+                (<a href="https://sharondi-columbia.wixsite.com/ditectlab/">Ditect Lab</a>). I received my Bachelor of Engineering from the <a href="http://www.dae.tsinghua.edu.cn/publish/daeen/index.html">School of Vehicle and Mobility</a>. I was awarded president fellow and Mindlin scholar in Columbia University.
               </p>
               <p>
-                I received my Master degree in Civil Engineering also at Columbia University.
-                I received my Bachelor of Engineering from the <a href="http://www.dae.tsinghua.edu.cn/publish/daeen/index.html">School of Vehicle and Mobility</a>
+                My dissertation topic is Physics-informed Deep Learning and its application in transporation. I am broadly interested in bridges deep learning with the physics prior knowledge such as PDEs.
+                
               </p>
               <p style="text-align:center">
                 <a href="mailto:zm2302@columbia.edu">Email</a> &nbsp/&nbsp
@@ -76,14 +75,47 @@
             <h2 style="padding-bottom:1vh;"> News </h2>
             <table style="line-height:150%" class="table table-hover table-striped">
                 <tr><td style="width:20%;">2023/06 - Our survey paper about Physics-informed Deep Learning in Traffic State Estimation accepted by Algorithms <a href="https://sites.google.com/view/rsspioneers2023/participants"></a>!</td></tr>
-                <tr><td style="width:20%;">2023/05 - Selected as Mindlin Scholar Civil in Engineering by Columbia University! </td></tr>
+                <tr><td style="width:20%;">2023/05 - Selected as Mindlin Scholar Civil in Engineering by Columbia University. </td></tr>
                 <tr><td style="width:20%;">2022/06 - I joined Siemens as a Student Researcher.</td></tr>
+                <tr><td style="width:20%;">2022/06 - Our paper on uncertainty quantification on of the Physics-informed DL is Awarded with the Best Paper in the .</td></tr>
+                <tr><td style="width:20%;">2022/06 - Our paper on traffic state estimation using joint of Normalizing flow and GAN got accepted to ECML 2022.</td></tr>
             </table>
         </section>
 
         <br>
 
         <br>
+
+        <section id="Research">
+        <h2> Selected Publications </h2>
+        <!-- <hr> -->
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+
+          <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
+            <td style="padding:10px;width:20%;vertical-align:middle">
+                <img src="images/phys_flowgan.jpg" alt="hpp" style="border-style: none" width="220">
+              </td>
+              <td style="padding:10px;width:80%;vertical-align:middle">
+                <p>
+                <papertitle>
+                 TrafficFlowGAN: Physics-Informed Flow Based Generative Adversarial Network for Uncertainty Quantification</papertitle>
+                </p>
+                <strong>Zhaobin Mo</strong>,
+                Yongjie Fu,
+                Daran Xu and 
+                <a href="https://www.civil.columbia.edu/content/xuan-sharon-di"><author>Xuan Di</author></a>
+                <br>
+                <em>
+                  Joint European Conference on Machine Learning and Knowledge Discovery in Databases (<strong>ECML-PKDD</strong>), 2023</em>
+                <br>
+                <a href="https://link.springer.com/chapter/10.1007/978-3-031-26409-2_20">[paper]</a>
+                <a href="https://github.com/ZhaobinMo/TrafficFlowGAN">[code]</a>
+            </td>
+          </tr>
+    
+            </tbody></table>
+        </section>
+
 
         <section id="Service" >
             <h2 style="padding-bottom:1vh;">Service</h2>    
