--- a/index.html
+++ b/index.html
@@ -106,15 +106,101 @@
                 <a href="https://www.civil.columbia.edu/content/xuan-sharon-di"><author>Xuan Di</author></a>
                 <br>
                 <em>
-                  Joint European Conference on Machine Learning and Knowledge Discovery in Databases (<strong>ECML-PKDD</strong>), 2023</em>
+                  Joint European Conference on Machine Learning and Knowledge Discovery in Databases (<strong>ECML-PKDD</strong>), 2022</em>
                 <br>
                 <a href="https://link.springer.com/chapter/10.1007/978-3-031-26409-2_20">[paper]</a>
                 <a href="https://github.com/ZhaobinMo/TrafficFlowGAN">[code]</a>
             </td>
           </tr>
     
+
+          <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
+            <td style="padding:10px;width:20%;vertical-align:middle">
+                <img src="images/uckdd.jpg" alt="hpp" style="border-style: none" width="220">
+              </td>
+              <td style="padding:10px;width:80%;vertical-align:middle">
+                <p>
+                <papertitle>
+                 Uncertainty quantification of car-following behaviors: physics-informed generative adversarial networks</papertitle>
+                </p>
+                <strong>Zhaobin Mo</strong> and
+                <a href="https://www.civil.columbia.edu/content/xuan-sharon-di"><author>Xuan Di</author></a>
+                <br>
+                <em>
+                  The 28th ACM SIGKDD in conjunction with the 11th International Workshop on Urban Computing (<strong>UrbComp2022</strong>), 2022</em>. <strong>Best Paper</strong>
+                <br>
+                <a href="http://urban-computing.com/urbcomp2022/file/UrbComp2022_paper_3574.pdf">[paper]</a>
+            </td>
+          </tr>
+
+
+
+          <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
+            <td style="padding:10px;width:20%;vertical-align:middle">
+                <img src="images/cvlight.png" alt="hpp" style="border-style: none" width="220">
+              </td>
+              <td style="padding:10px;width:80%;vertical-align:middle">
+                <p>
+                <papertitle>
+                 CVLight: Decentralized learning for adaptive traffic signal control with connected vehicles</papertitle>
+                </p>
+                <strong>Zhaobin Mo</strong>, Wangzhi Li, Yongjie Fu, Kangrui Ruan, and
+                <a href="https://www.civil.columbia.edu/content/xuan-sharon-di"><author>Xuan Di</author></a>
+                <br>
+                <em>
+                  Transportation research part C, 2022</em>.
+                <br>
+                <a href="https://www.sciencedirect.com/science/article/pii/S0968090X22001644">[paper]</a>
+            </td>
+          </tr>
+
+
+          <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
+            <td style="padding:10px;width:20%;vertical-align:middle">
+                <img src="images/pidl_cfm.jpg" alt="hpp" style="border-style: none" width="220">
+              </td>
+              <td style="padding:10px;width:80%;vertical-align:middle">
+                <p>
+                <papertitle>
+                 CVLight: Decentralized learning for adaptive traffic signal control with connected vehicles</papertitle>
+                </p>
+                <strong>Zhaobin Mo</strong>, Wangzhi Li, Yongjie Fu, Kangrui Ruan, and
+                <a href="https://www.civil.columbia.edu/content/xuan-sharon-di"><author>Xuan Di</author></a>
+                <br>
+                <em>
+                  Transportation research part C, 2022</em>.
+                <br>
+                <a href="https://www.sciencedirect.com/science/article/pii/S0968090X22001644">[paper]</a>
+            </td>
+          </tr>
+
+
+          <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
+            <td style="padding:10px;width:20%;vertical-align:middle">
+                <img src="images/cvlight.png" alt="hpp" style="border-style: none" width="220">
+              </td>
+              <td style="padding:10px;width:80%;vertical-align:middle">
+                <p>
+                <papertitle>
+                 A physics-informed deep learning paradigm for car-following models</papertitle>
+                </p>
+                <strong>Zhaobin Mo</strong>, Rongye Shi, and
+                <a href="https://www.civil.columbia.edu/content/xuan-sharon-di"><author>Xuan Di</author></a>
+                <br>
+                <em>
+                  Transportation research part C, 2021</em>.
+                <br>
+                <a href="https://www.sciencedirect.com/science/article/pii/S0968090X21002539">[paper]</a>
+                <a href="https://github.com/ZhaobinMo/PINN_CFM">[code]</a>
+            </td>
+          </tr>
+
+
             </tbody></table>
         </section>
+
+
+
 
 
         <section id="Service" >
