--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
           <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
             <td style="padding:10px;width:20%;vertical-align:middle">
-                <img src="images/uckdd.jpg" alt="hpp" style="border-style: none" width="220">
+                <img src="images/uckdd.jpeg" alt="hpp" style="border-style: none" width="220">
               </td>
               <td style="padding:10px;width:80%;vertical-align:middle">
                 <p>
@@ -135,6 +135,9 @@
 
 
 
+        
+
+
           <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
             <td style="padding:10px;width:20%;vertical-align:middle">
                 <img src="images/cvlight.png" alt="hpp" style="border-style: none" width="220">
@@ -157,27 +160,28 @@
 
           <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
             <td style="padding:10px;width:20%;vertical-align:middle">
-                <img src="images/pidl_cfm.jpg" alt="hpp" style="border-style: none" width="220">
+                <img src="images/pinn_aaai.jpg" alt="hpp" style="border-style: none" width="220">
               </td>
               <td style="padding:10px;width:80%;vertical-align:middle">
                 <p>
                 <papertitle>
-                 CVLight: Decentralized learning for adaptive traffic signal control with connected vehicles</papertitle>
+                 Physics-informed deep learning for traffic state estimation: A hybrid paradigm informed by second-order traffic models</papertitle>
                 </p>
-                <strong>Zhaobin Mo</strong>, Wangzhi Li, Yongjie Fu, Kangrui Ruan, and
+                Rongye Shi, <strong>Zhaobin Mo</strong>, and
                 <a href="https://www.civil.columbia.edu/content/xuan-sharon-di"><author>Xuan Di</author></a>
                 <br>
                 <em>
-                  Transportation research part C, 2022</em>.
+                  Proceedings of the AAAI Conference on Artificial Intelligence, (<strong>AAAI</strong>), 2021</em>.
                 <br>
-                <a href="https://www.sciencedirect.com/science/article/pii/S0968090X22001644">[paper]</a>
+                <a href="https://ojs.aaai.org/index.php/AAAI/article/view/16132">[paper]</a>
             </td>
           </tr>
 
+          
 
           <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
             <td style="padding:10px;width:20%;vertical-align:middle">
-                <img src="images/cvlight.png" alt="hpp" style="border-style: none" width="220">
+                <img src="images/pidl_cfm.jpeg" alt="hpp" style="border-style: none" width="220">
               </td>
               <td style="padding:10px;width:80%;vertical-align:middle">
                 <p>
