--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 <name>Zhaobin Mo - 莫钊镔</name>
               </p>
               <p>
-                I am currently a fourth-year Ph. D. student in Civil Engineering at Columbia University. I will be graduating in Dec. 2023 under the advision of <a href="https://www.civil.columbia.edu/content/xuan-sharon-di">Prof. Xuan Di</a> at
-                (<a href="https://sharondi-columbia.wixsite.com/ditectlab/">Ditect Lab</a>). I received my Bachelor of Engineering from the <a href="http://www.dae.tsinghua.edu.cn/publish/daeen/index.html">School of Vehicle and Mobility</a>. I was awarded president fellow and Mindlin scholar in Columbia University.
+                I am currently a final-year Ph. D. student in Civil Engineering at Columbia University. I will be graduating in Dec. 2023 under the advision of <a href="https://www.civil.columbia.edu/content/xuan-sharon-di">Prof. Xuan Di</a> at
+                (<a href="https://sharondi-columbia.wixsite.com/ditectlab/">Ditect Lab</a>). I received my Bachelor of Engineering from the <a href="http://www.dae.tsinghua.edu.cn/publish/daeen/index.html">School of Vehicle and Mobility</a> of Tsinghua University. I was awarded president fellow and Mindlin scholar in Columbia University.
               </p>
               <p>
                 My research focused on understanding the theory and design of AI models in transporation that leverge physics prior knowledge encoded in the data-generating mechanism. Broadly speaking, my research belongs to scientific machine learning, which concerns regularizing and explaining black-box AI models with physics prior knowldge. I have also worked on various topics in data science, including reinforcement learning, graph neural networks, and deep generative models. 
@@ -97,7 +97,7 @@
 
           <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
             <td style="padding:10px;width:20%;vertical-align:middle">
-                <img src="images/phys_flowgan.jpg" alt="hpp" style="border-style: none" width="220">
+                <img src="images/games.jpeg" alt="hpp" style="border-style: none" width="220">
               </td>
               <td style="padding:10px;width:80%;vertical-align:middle">
                 <p>
@@ -105,7 +105,7 @@
                  Robust Data Sampling in Machine Learning: A Game-Theoretic Framework for Training and Validation Data Selection</papertitle>
                 </p>
                 <strong>Zhaobin Mo</strong>,
-                <a href="https://rongyeshi.github.io/"><author>Rongye Shi</author></a> and 
+                <a href="https://rongyeshi.github.io"><author>Rongye Shi</author></a> and 
                 <a href="https://www.civil.columbia.edu/content/xuan-sharon-di"><author>Xuan Di</author></a>
                 <br>
                 <em>
@@ -127,8 +127,8 @@
                  TrafficFlowGAN: Physics-Informed Flow Based Generative Adversarial Network for Uncertainty Quantification</papertitle>
                 </p>
                 <strong>Zhaobin Mo</strong>,
-                <a href="https://www.linkedin.com/in/daran-xu-6a0870176/"><author>Yongjie Fu</author></a>,
-                <a href="https://www.linkedin.com/in/daran-xu-6a0870176/"><author>Daran Xu</author></a> and 
+                <a href="https://www.linkedin.com/in/yongjie-fu-b42590212"><author>Yongjie Fu</author></a>,
+                <a href="https://www.linkedin.com/in/daran-xu-6a0870176"><author>Daran Xu</author></a> and 
                 <a href="https://www.civil.columbia.edu/content/xuan-sharon-di"><author>Xuan Di</author></a>
                 <br>
                 <em>
@@ -162,20 +162,20 @@
 
           <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
             <td style="padding:10px;width:20%;vertical-align:middle">
-                <img src="images/uckdd.jpeg" alt="hpp" style="border-style: none" width="220">
+                <img src="images/PhysGAN.png" alt="hpp" style="border-style: none" width="220">
               </td>
               <td style="padding:10px;width:80%;vertical-align:middle">
                 <p>
                 <papertitle>
                  Quantifying uncertainty in traffic state estimation using generative adversarial networks</papertitle>
                 </p>
-                <strong>Zhaobin Mo</strong>, <a href="https://www.linkedin.com/in/daran-xu-6a0870176/"><author>Yongjie Fu</author></a>, and
+                <strong>Zhaobin Mo</strong>, <a href="https://www.linkedin.com/in/yongjie-fu-b42590212"><author>Yongjie Fu</author></a>, and
                 <a href="https://www.civil.columbia.edu/content/xuan-sharon-di"><author>Xuan Di</author></a>
                 <br>
                 <em>
                   IEEE 25th International Conference on Intelligent Transportation Systems (<strong>ITSC</strong>), 2022</em>.
                 <br>
-                <a href="http://urban-computing.com/urbcomp2022/file/UrbComp2022_paper_3574.pdf">[paper]</a>
+                <a href="https://ieeexplore.ieee.org/abstract/document/9921791">[paper]</a>
             </td>
           </tr>
         
@@ -190,7 +190,7 @@
                 <papertitle>
                  CVLight: Decentralized learning for adaptive traffic signal control with connected vehicles</papertitle>
                 </p>
-                <strong>Zhaobin Mo</strong>, <a href="https://www.linkedin.com/in/wangzhi-li"><author>Wangzhi Li</author></a>, <a href="https://www.linkedin.com/in/daran-xu-6a0870176/"><author>Yongjie Fu</author></a>, <a href="https://www.linkedin.com/in/kangrui-ruan"><author>Kangrui Ruan</author></a>, and
+                <strong>Zhaobin Mo</strong>, <a href="https://www.linkedin.com/in/wangzhi-li"><author>Wangzhi Li</author></a>, <a href="https://www.linkedin.com/in/yongjie-fu-b42590212"><author>Yongjie Fu</author></a>, <a href="https://www.linkedin.com/in/kangrui-ruan"><author>Kangrui Ruan</author></a>, and
                 <a href="https://www.civil.columbia.edu/content/xuan-sharon-di"><author>Xuan Di</author></a>
                 <br>
                 <em>
@@ -245,7 +245,7 @@
 
           <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
             <td style="padding:10px;width:20%;vertical-align:middle">
-                <img src="images/pidl_cfm.jpeg" alt="hpp" style="border-style: none" width="220">
+                <img src="images/tits.png" alt="hpp" style="border-style: none" width="220">
               </td>
               <td style="padding:10px;width:80%;vertical-align:middle">
                 <p>
@@ -254,8 +254,8 @@
                 </p>
                 <a href="https://rongyeshi.github.io/"><author>Rongye Shi</author></a>,
                 <strong>Zhaobin Mo</strong>, 
-                Kuang Huang,
-                <a href="https://www.civil.columbia.edu/content/xuan-sharon-di"><author>Xuan Di</author></a> and Qiang Du
+                <a href="https://scholar.google.com/citations?user=fslwHcYAAAAJ&hl=en"><author>Kuang Huang</author></a>,
+                <a href="https://www.civil.columbia.edu/content/xuan-sharon-di"><author>Xuan Di</author></a> and <a href="http://www.columbia.edu/~qd2125"><author>Qiang Du</author></a>
                 <br>
                 <em>
                   IEEE Transactions on Intelligent Transportation Systems (<strong>TITS</strong>), 2021</em>.
@@ -266,19 +266,19 @@
 
           <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
             <td style="padding:10px;width:20%;vertical-align:middle">
-                <img src="images/pidl_cfm.jpeg" alt="hpp" style="border-style: none" width="220">
+                <img src="images/icmew.jpeg" alt="hpp" style="border-style: none" width="220">
               </td>
               <td style="padding:10px;width:80%;vertical-align:middle">
                 <p>
                 <papertitle>
                  Multimedia fusion at semantic level in vehicle cooperactive perception</papertitle>
                 </p>
-                Zhongyang Xiao, <strong>Zhaobin Mo</strong>, Kun Jiang, and Diange Yang
+                <a href="https://www.researchgate.net/profile/Xiao-Zhongyang"><author>Zhongyang Xiao</author></a>, <strong>Zhaobin Mo</strong>, <a href="http://www.svm.tsinghua.edu.cn/essay/80/1809.html"><author>Kun Jiang</author></a>, and <a href="http://www.svm.tsinghua.edu.cn/essay/80/1834.html"><author>Diange Yang</author></a>
                 <br>
                 <em>
-                  IEEE Transactions on Intelligent Transportation Systems (<strong>TITS</strong>), 2021</em>.
+                  IEEE International Conference on Multimedia & Expo Workshops (ICMEW) (<strong>ICMEW</strong>), 2018</em>.
                 <br>
-                <a href="https://ieeexplore.ieee.org/abstract/document/9531557">[paper]</a>
+                <a href="https://ieeexplore.ieee.org/abstract/document/8551565">[paper]</a>
             </td>
           </tr>
 
