--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
           <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
             <td style="padding:10px;width:20%;vertical-align:middle">
-                <img src="images/icmew.jpeg" alt="hpp" style="border-style: none" width="220">
+                <img src="images/icmew.png" alt="hpp" style="border-style: none" width="220">
               </td>
               <td style="padding:10px;width:80%;vertical-align:middle">
                 <p>
