--- a/index.html
+++ b/index.html
@@ -54,10 +54,7 @@
                 (<a href="https://sharondi-columbia.wixsite.com/ditectlab/">Ditect Lab</a>). I received my Bachelor of Engineering from the <a href="http://www.dae.tsinghua.edu.cn/publish/daeen/index.html">School of Vehicle and Mobility</a> of Tsinghua University. I was awarded president fellow and Mindlin scholar in Columbia University.
               </p>
               <p>
-                My research focused on understanding the theory and design of AI models in transporation that leverge physics prior knowledge encoded in the data-generating mechanism. Broadly speaking, my research belongs to scientific machine learning, which concerns regularizing and explaining black-box AI models with physics prior knowldge. I have also worked on various topics in data science, including reinforcement learning, graph neural networks, and deep generative models. 
-
-                My email is zm2303 at columbia dot edu.
-                
+                My research focused on understanding the theory and design of deep learning models in transporation that leverge conventional traffic theories encoded in the data-generating mechanism. Broadly speaking, my research belongs to scientific machine learning, which concerns regularizing and explaining black-box deep learning models with physics prior knowldge. I have also worked on various topics in data science, including reinforcement learning, graph neural networks, and deep generative models. 
               </p>
               <p style="text-align:center">
                 <a href="mailto:zm2302@columbia.edu">Email</a> &nbsp/&nbsp
@@ -116,6 +113,71 @@
           </tr>
 
 
+          <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
+            <td style="padding:10px;width:20%;vertical-align:middle">
+                <img src="images/applsci.png" alt="hpp" style="border-style: none" width="220">
+              </td>
+              <td style="padding:10px;width:80%;vertical-align:middle">
+                <p>
+                <papertitle>
+                 Longitudinal Control Strategy for Connected Electric Vehicle with Regenerative Braking in Eco-approach and Departure</papertitle>
+                </p>
+                <a href="https://www.linkedin.com/in/rolando-bautista-montesano/?originalSubdomain=mx"><author>Rolando Bautista-Montesano</author></a>, 
+                <a href="https://research.tec.mx/vivo-tec/display/PID_339629"><author>Renato Galluzzi</author></a>, 
+                <strong>Zhaobin Mo</strong>,
+                <a href="https://www.linkedin.com/in/yongjie-fu-b42590212"><author>Yongjie Fu</author></a>, 
+                <a href="https://research.tec.mx/vivo-tec/display/PID_20687"><author>Rogelio Bustamante-Bello</author></a>, and 
+                <a href="https://www.civil.columbia.edu/content/xuan-sharon-di"><author>Xuan Di</author></a>
+                <br>
+                <em>
+                  Applied Sciences, 2023</em>
+                <br>
+                <a href="https://www.mdpi.com/2076-3417/13/8/5089">[paper]</a>
+            </td>
+          </tr>
+
+
+          <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
+            <td style="padding:10px;width:20%;vertical-align:middle">
+                <img src="images/aimedicine.jpg" alt="hpp" style="border-style: none" width="220">
+              </td>
+              <td style="padding:10px;width:80%;vertical-align:middle">
+                <p>
+                <papertitle>
+                 Detecting Mild Cognitive Impairment and Dementia in Older Adults using Naturalistic Driving Data and Interaction-based Classification from Influence Score</papertitle>
+                </p>
+                <a href="https://www.civil.columbia.edu/content/xuan-sharon-di">
+                  <author>Xuan Di</author></a>,
+                <a href="https://yiqiao-yin.com/">
+                  <author>Yiqiao Yin</author></a>,
+                <a href="https://www.linkedin.com/in/yongjie-fu-b42590212">
+                  <author>Yongjie Fu</author></a>, 
+                <strong>Zhaobin Mo</strong>,
+                <a href="https://stat.columbia.edu/department-directory/name/shaw-hwa-lo">
+                  <author>Shaw-Hwa Lo</author></a>, 
+                <a href="hhttps://coloradosph.cuanschutz.edu/resources/directory/directory-profile/Diguiseppi-Carolyn-UCD1450">
+                  <author>Carolyn DiGuiseppi </author></a>, 
+                <a href="https://lsa.umich.edu/psych/people/affiliated-faculty/eby.html">
+                  <author>David W. Eby</author></a>，
+                <a href="https://profiles.ucsd.edu/linda.hill">
+                  <author>Linda Hill</author></a>，
+                <a href="https://www.publichealth.columbia.edu/profile/thelma-mielenz-phd">
+                  <author>Thelma J. Mielenz</author></a>，
+                <a href="https://www.albany.edu/cemhd/9269.php">
+                  <author>David Strogatz</author></a>，
+                <a href="https://www.publichealth.columbia.edu/profile/minjae-kim-md">
+                  <author>Minjae Kim</author></a> and
+                <a href="https://www.publichealth.columbia.edu/profile/guohua-li-md">
+                  <author>Guohua Li</author></a>
+                <br>
+                <em>
+                  Applied Sciences, 2023</em>
+                <br>
+                <a href="https://www.mdpi.com/2076-3417/13/8/5089">[paper]</a>
+            </td>
+          </tr>
+
+
 
           <tr onmouseout="nightsight_stop()" onmouseover="nightsight_start()">
             <td style="padding:10px;width:20%;vertical-align:middle">
@@ -127,9 +189,12 @@
                  TrafficFlowGAN: Physics-Informed Flow Based Generative Adversarial Network for Uncertainty Quantification</papertitle>
                 </p>
                 <strong>Zhaobin Mo</strong>,
-                <a href="https://www.linkedin.com/in/yongjie-fu-b42590212"><author>Yongjie Fu</author></a>,
-                <a href="https://www.linkedin.com/in/daran-xu-6a0870176"><author>Daran Xu</author></a> and 
-                <a href="https://www.civil.columbia.edu/content/xuan-sharon-di"><author>Xuan Di</author></a>
+                <a href="https://www.linkedin.com/in/yongjie-fu-b42590212">
+                  <author>Yongjie Fu</author></a>,
+                <a href="https://www.linkedin.com/in/daran-xu-6a0870176">
+                  <author>Daran Xu</author></a> and 
+                <a href="https://www.civil.columbia.edu/content/xuan-sharon-di">
+                  <author>Xuan Di</author></a>
                 <br>
                 <em>
                   Joint European Conference on Machine Learning and Knowledge Discovery in Databases (<strong>ECML-PKDD</strong>), 2022</em>
@@ -153,7 +218,7 @@
                 <a href="https://www.civil.columbia.edu/content/xuan-sharon-di"><author>Xuan Di</author></a>
                 <br>
                 <em>
-                  The 28th ACM SIGKDD in conjunction with the 11th International Workshop on Urban Computing (<strong>UrbComp2022</strong>), 2022</em>. <strong>Best Paper</strong>
+                  Abridged in KDD 2022 Workshop on Urban Computing <strong style="color:orange">(Best Paper)</strong></em>. 
                 <br>
                 <a href="http://urban-computing.com/urbcomp2022/file/UrbComp2022_paper_3574.pdf">[paper]</a>
             </td>
