--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                 <name>Zhaobin Mo - 莫钊镔</name>
               </p>
               <p>
-                I am currently a final-year Ph. D. student in Civil Engineering at Columbia University. I will be graduating in Dec. 2023 under the advision of <a href="https://www.civil.columbia.edu/content/xuan-sharon-di">Prof. Xuan Di</a> at
-                (<a href="https://sharondi-columbia.wixsite.com/ditectlab/">Ditect Lab</a>). I received my Bachelor of Engineering from the <a href="http://www.dae.tsinghua.edu.cn/publish/daeen/index.html">School of Vehicle and Mobility</a> of Tsinghua University. I was awarded president fellow and Mindlin scholar in Columbia University.
+                I am currently a final-year Ph. D. student in Civil Engineering at Columbia University. I will be graduating in Dec. 2023 under the advision of <a href="https://www.civil.columbia.edu/content/xuan-sharon-di">Prof. Xuan Di</a>
+                (<a href="https://sharondi-columbia.wixsite.com/ditectlab/">Ditect Lab</a>). I received my Bachelor of Engineering from the <a href="http://www.dae.tsinghua.edu.cn/publish/daeen/index.html">School of Vehicle and Mobility</a> of Tsinghua University. During my time at Columbia University, I was recognized as a President Fellow and Mindlin Scholar.
               </p>
               <p>
-                My research focused on understanding the theory and design of deep learning models in transporation that leverge conventional traffic theories encoded in the data-generating mechanism. Broadly speaking, my research belongs to scientific machine learning, which concerns regularizing and explaining black-box deep learning models with physics prior knowldge. I have also worked on various topics in data science, including reinforcement learning, graph neural networks, and deep generative models. 
+                My research focuses on physics-informed deep learning that facilitates the integration of domain knowledge and deep learning models. I am broadly interested in how prior knowldge will empower safer, robust, and explainable AI. I have also worked on various topics in data science, including reinforcement learning, graph neural networks, and deep generative models. Their application varies, such as car-following modeling, traffic state estimation, spatial-temporal mobility prediction, and traffic signal control. 
               </p>
               <p style="text-align:center">
                 <a href="mailto:zm2302@columbia.edu">Email</a> &nbsp/&nbsp
