--- a/index.html
+++ b/index.html
@@ -50,12 +50,17 @@
                 <name>Zhaobin Mo - 莫钊镔</name>
               </p>
               <p>
-                I am currently a final-year Ph. D. student in Civil Engineering at Columbia University. I will be graduating in Dec. 2023 under the advision of <a href="https://www.civil.columbia.edu/content/xuan-sharon-di">Prof. Xuan Di</a>
-                (<a href="https://sharondi-columbia.wixsite.com/ditectlab/">Ditect Lab</a>). I received my Bachelor of Engineering from the <a href="http://www.dae.tsinghua.edu.cn/publish/daeen/index.html">School of Vehicle and Mobility</a> of Tsinghua University. During my time at Columbia University, I was recognized as a President Fellow and Mindlin Scholar.
+                I am currently a final-year Ph. D. student in Civil Engineering at Columbia University advised by <a href="https://www.civil.columbia.edu/content/xuan-sharon-di">Prof. Xuan Di</a>
+                (<a href="https://sharondi-columbia.wixsite.com/ditectlab/">Ditect Lab</a>). I was recognized as a President Fellow and Mindlin Scholar at CU. Before joining CU, I received my Bachelor of Engineering from the <a href="http://www.dae.tsinghua.edu.cn/publish/daeen/index.html">School of Vehicle and Mobility</a> at Tsinghua University.
               </p>
+
               <p>
-                My research focuses on physics-informed deep learning that facilitates the integration of domain knowledge and deep learning models. I am broadly interested in how prior knowldge will empower safer, robust, and explainable AI. I have also worked on various topics in data science, including reinforcement learning, graph neural networks, and deep generative models. Their application varies, such as car-following modeling, traffic state estimation, spatial-temporal mobility prediction, and traffic signal control. 
+                  My research focuses on physics-informed deep learning that facilitates the integration of domain knowledge and deep learning models. I am passionate in exploring how prior knowldge will empower safer, robust, and explainable deep learning models. I have also worked on other topics like reinforcement learning, graph neural networks, and deep generative models.
               </p>
+                
+
+                <!--I have also worked on other topics like reinforcement learning, graph neural networks, and deep generative models. Their application varies, including car-following modeling, traffic state estimation, spatial-temporal mobility prediction, and traffic signal control. -->
+              
               <p style="text-align:center">
                 <a href="mailto:zm2302@columbia.edu">Email</a> &nbsp/&nbsp
                 <a href="data/CV_ZhaobinMo.pdf">CV (last updated: July 2023)</a> &nbsp/&nbsp
@@ -73,11 +78,18 @@
         <section id="News">
             <h2 style="padding-bottom:1vh;"> News </h2>
             <table style="line-height:150%" class="table table-hover table-striped">
-                <tr><td style="width:20%;">2023/06 - Our survey paper about Physics-informed Deep Learning in Traffic State Estimation accepted by Algorithms <a href="https://sites.google.com/view/rsspioneers2023/participants"></a>!</td></tr>
+                <tr><td style="width:20%;">2023/06 - Our survey paper about Physics-informed Deep Learning in Traffic State Estimation accepted by Algorithms</td></tr>
                 <tr><td style="width:20%;">2023/05 - Selected as Mindlin Scholar Civil in Engineering by Columbia University. </td></tr>
-                <tr><td style="width:20%;">2022/06 - I joined Siemens as a Student Researcher.</td></tr>
-                <tr><td style="width:20%;">2022/06 - Our paper on uncertainty quantification on of the Physics-informed DL is Awarded with the Best Paper in the .</td></tr>
-                <tr><td style="width:20%;">2022/06 - Our paper on traffic state estimation using joint of Normalizing flow and GAN got accepted to ECML 2022.</td></tr>
+                <tr><td style="width:20%;">2023/04 - Our paper on Longitudinal Contorl of Electrical Connected Vehicle got accepted to Games.</td></tr>
+                <tr><td style="width:20%;">2023/01 - Our paper on Robust Data Sampling got accepted to Games.</td></tr>
+                <tr><td style="width:20%;">2022/09 - Our paper on traffic state estimation using joint of Normalizing flow and GAN got accepted to ECML 2022.</td></tr>
+                <tr><td style="width:20%;">2022/08 - Best Paper award in the KDD 2023 workshop on urban computing</td></tr>
+                <tr><td style="width:20%;">2022/08 - Our paper on decentralized traffic signal control got published to Transportation Research: Part C</td></tr>
+                <tr><td style="width:20%;">2022/06 - Joined Siemens as a Student Researcher.</td></tr>
+                <tr><td style="width:20%;">2021/09 - Our paper on Physics-informed Deep Learning for Traffic State Estimation got published to IEEE Transaction on Intelligent Transportation System.</td></tr>
+                <tr><td style="width:20%;">2021/09 - Our paper on Physics-informed Deep Learning for Car-following Modeling got published to ITransportation Research: Part C</td></tr>
+                <tr><td style="width:20%;">2021/05 - Our paper on Physics-informed Deep Learning for Traffic State Estimation got published to IEEE Transaction on AAAI 2021</td></tr>
+                <tr><td style="width:20%;">2018/12 - <strong style="color:white">I am fortunate to marry Xiangyi Liao</strong></td></tr> 
             </table>
         </section>
 
